# magic

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README  README.md  WHATSNEW  adastra_compile.sh  build_SHTns_3.5.4_bba69513_PEB.bash  compile.sh  entrypoint.sh  genoa_ADASTRA.sh  lagoJournal.txt  mi250x_ADASTRA.sh  sourceme.csh  sourceme.sh
.github/workflows/: build-deploy.yaml  main.yml
cmake/: FindFFTW3.cmake  FindOpenMP_Fortran.cmake  FindSSE.cmake
doc/: Manual.html  list_of_subroutines.txt
doc/sphinx/: BextNamelist.rst  Makefile  api.rst  autoTests.rst  cleanPreProc.sh  conf.py  contents.rst  contribute.rst  controlNamelist.rst  download.rst  equations.rst  foreword.rst  gridNamelist.rst  index.rst  install.rst  latex_macros.sty  logFile.rst  mantle_icNamelist.rst  namelist.rst  namelists.rst  numerics.rst  outFiles.rst  outRadialFiles.rst  outSpecFiles.rst  outTimeSeries.rst  outTransportProp.rst  outputNamelist.rst  outputNmlCoeff.rst  outputNmlPot.rst  outputNmlStd.rst  physNamelist.rst  postProc.rst  signalFile.rst  startNamelist.rst
doc/sphinx/.templates/: home.html
doc/sphinx/apiFortran/: IOAdd.rst  IOBinaryOutputs.rst  IOGeneral.rst  baseModules.rst  blocking.rst  checkPoints.rst  derInt.rst  initModules.rst  legFourier.rst  legFourierChebAlgebra.rst  magic.rst  misc.rst  parallelModules.rst  precalcModules.rst  timeAdvLinear.rst  timeAdvNonLinear.rst  timeAdvance.rst
doc/sphinx/apiPython/: graphMovCoeff.rst  libs.rst  misc.rst  outTO.rst  radial.rst  runComparison.rst  spectra.rst  timeSeries.rst  toParaview.rst
doc/sphinx/outputFiles/: logFile.rst  (+15 more)
idl/: elag.pro  magsym6.1.pro  readGfile.m
namelists_hpc/: input_big_FD.nml  input_middle_FD.nml  input_small.nml  input_small_FD.nml
paraview/: converter.nml  vts.f90
python/magic/: README  README.md  TOreaders.py  __init__.py  averages.py  bLayers.py  butterfly.py  checker.py  checkpoint.py  coeff.py  compSims.py  cyl.py  genLib.py  graph.py  graph2rst.py  graph2vtk.py  graph_backup.py  libmagic.py  libmelt.py  log.py  magic.cfg  magic.cfg.default  model.json  movie.py  movie2vtk.py  movie3D.py  npfile.py  plotlib.py  potExtra.py  potential.py  radial.py  radialSpectra.py  series.py  setup.py  spectralTransforms.py  spectrum.py  surf.py  thHeat.py  toMovie.py
samples/: .gitignore  adastra_acc_binding.sh  llsubmit.cmd  llsubmit_hydra.cmd  llsubmit_hydra_hybrid.cmd  llsubmit_hydra_shtns.cmd  magic_checks.pl  magic_wizard.py  nonRegTests_Resu.txt  set_adastra_GPU_env.sh  submit_cuda.cmd  submit_gnu.cmd  submit_mpi.cmd  submit_odin.cmd
samples/boussBenchSat/: checkpoint_end.start  clear.sh  genoa_ADATRA_submit.sh  host.list  input.nml  mi250x_ADASTRA_submit.sh  reference.out  rst_end.start  submitScript.sh  submit_adastra.sh  submit_lumi02.sh  unitTest.py
samples/couetteAxi/: input.nml  inputStart.nml  reference.out  unitTest.py
samples/doubleDiffusion/: checkpoint_end.start  input.nml  input_FD.nml  reference.out  rst_end.start  unitTest.py
samples/dynamo_benchmark/: clear.sh  compare.py  input.nml  reference.out  referenceMag.out  submitScript.sh  unitTest.py
samples/dynamo_benchmark_condICrotIC/: input.nml  input_restart.nml  reference.out  referenceMag.out  unitTest.py
samples/finite_differences/: input.nml  reference.out  unitTest.py
samples/fluxPerturbation/: input.nml  reference.out  unitTest.py
samples/full_sphere/: checkpoint_end.start  input.nml  reference.out  unitTest.py
samples/hydro_bench_anel/: host.list  input.nml  reference.out  runMe.sh  runMe_mpi.sh  unitTest.py
samples/isothermal_nrho3/: README  input.nml  reference.out  unitTest.py
samples/onset/: input.nml  reference.out  unitTest.py
samples/phase_field/: input_FD.nml  input_cheb.nml  reference.out  referencePhase.out  unitTest.py
samples/precession/: input.nml  reference.out  unitTest.py
samples/testCoeffOutputs/: getData.py  input.nml  reference.out  runMe.sh  unitTest.py
samples/testGraphMovieOutputs/: .helpfile  getData.py  input.nml  reference.out  runMe.sh  unitTest.py
samples/testMapping/: input.nml  inputStart.nml  reference.out  runMe.sh  runMe_mpi.sh  unitTest.py
samples/testOutputs/: input.nml  reference.out  runMe.sh  runMe_mpi.sh  unitTest.py
samples/testRMSOutputs/: input.nml  input_FD.nml  input_restart.nml  reference.out  runMe.sh  unitTest.py
samples/testRadialOutputs/: input.nml  reference.out  runMe.sh  runMe_mpi.sh  unitTest.py
samples/testRestart/: input.nml  inputStart.nml  reference.out  referenceIC.out  referenceIC.test  referenceMag.out  runMe.sh  runMe_mpi.sh  unitTest.py
samples/testTOGeosOutputs/: getData.py  input.nml  reference.out  unitTest.py
samples/testTruncations/: input.nml  reference.out  runMe.sh  runMe_mpi.sh  unitTest.py
samples/testdtBMovieOutputs/: input.nml  reference.out  unitTest.py
samples/tides_radial_velocity/: input.nml  unitTest.py
samples/time_schemes/: input_ARS222.nml  input_ARS343.nml  input_ARS443.nml  input_BPR353.nml  input_CB3.nml  input_CNAB2.nml  input_CNLF.nml  input_KC564.nml  input_KC564_FD.nml  input_KC785_FD.nml  input_LZ232.nml  input_MODCNAB.nml  input_PC2.nml  input_SBDF2.nml  input_SBDF3.nml  input_SBDF4.nml  reference.out  unitTest.py
samples/varCond/: input.nml  reference.out  referenceMag.out  unitTest.py
samples/varProps/: input.nml  inputCheb.nml  inputFD.nml  inputMap.nml  reference.out  unitTest.py
src/: .gitignore  Bext.f90  CMakeLists.txt  Egeos.f90  Grenoble.f90  LMLoop.f90  LMLoop_data.f90  LMmapping.f90  MRI.f90  Makefile  Namelists.f90  README.md  REAME.md  RMS.f90  RMS_helpers.f90  TO.f90  TO_arrays.f90  TO_helpers.f90  algebra.f90  algebra_hipfort.f90  algebra_lapack.f90  algebra_loops.f90  algebra_mkl.f90  assertions.cpp  assertions.f90  blocking.f90  c_utils.c  char_manip.f90  chebInt.f90  chebyshev.f90  chebyshev_polynoms.f90  communications.f90  const.f90  constants.f90  cosine_transform.f90  cosine_transform_even.f90  cosine_transform_odd.f90  courant.f90  cutils_iface.f90  dct_fftw.f90  (+368 more)
submitscripts/: llsubmit_hybrid.cmd  msub_hlrn.pbs  qsub_gpc.pbs  resub.py  sbatch_draco.slurm
(+49 files in other folders)
